[tool.poetry]
name = "pyperfcheck"
version = "0.1.1"  # Update this version to match your current version
description = "A high-performance benchmarking library for Python"
authors = ["Janardhan Medathati <7janardhan7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.8.0"
tabulate = "^0.8.9"
matplotlib = "^3.3.4"
asyncio = "^3.4.3"
